# imdb-ratings-dashboard

./: .gitignore  README.md  app.py  award_shows.ipynb  award_shows.py  imdb_data.py  pyproject.toml  rating_vis.twb  ratings.csv  ratings_analysis.ipynb  ratings_analysis.py  ratings_clean.csv  requirements.txt  serve_app.py
.github/workflows/: deploy.yml
