[tool.poetry]
name = "imdb-ratings-dashboard"
version = "0.1.0"
description = ""
authors = ["Ethan Fuerst <34084535+ethanfuerst@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "imdb_ratings_dashboard"}]

[tool.poetry.dependencies]
python = "^3.9.7"
dash-bootstrap-components = "1.6.0"
plotly = "5.24.1"
dash = "2.18.2"
pandas = "2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true
