[tool.poetry]
name = "imdb-ratings-dashboard"
version = "0.1.0"
description = ""
authors = ["Ethan Fuerst <34084535+ethanfuerst@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dash-bootstrap-components = "1.6.0"
plotly = "5.24.1"
dash = "2.18.2"
pandas = "2.2.3"
attr = "^0.3.2"
modal = "^1.0.5"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
