[project]
name = "imdb-ratings-dashboard"
version = "0.1.0"
description = ""
authors = [{ name = "Ethan Fuerst", email = "34084535+ethanfuerst@users.noreply.github.com" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
dependencies = [
    "dash-bootstrap-components==1.6.0",
    "plotly==5.24.1",
    "dash==2.18.2",
    "pandas==2.2.3",
    "attr>=0.3.2,<0.4",
    "modal>=1.0.5,<2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1,<7",
    "black>=25.1.0,<26",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
